--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boggle grid solver",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gt src/test/*.js --output"
   },
   "repository": "",
   "keywords": [
@@ -16,5 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "check-types": "~0.6.4"
+  },
+  "devDependencies": {
+    "gt": "~0.8.8"
   }
 }
