--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "gt src/test/*.js --output"
   },
-  "repository": "",
+  "repository": "https://bitbucket.org/bahmutov/boggle.git",
   "keywords": [
     "boggle",
     "solver",
