--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "check-types": "~1.1.1",
     "matrix-paths": "0.0.3",
-    "prefix-dictionary": "0.0.1"
+    "prefix-dictionary": "0.0.1",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "gt": "~0.8.21",
