--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "check-types": "~1.1.1",
     "matrix-paths": "0.0.3",
-    "prefix-dictionary": "0.0.1",
+    "prefix-dictionary": "Zolmeister/prefix-dictionary",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
