fixed dependency on prefix-dictionary

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "check-types": "~1.1.1",
     "matrix-paths": "0.0.3",
-    "prefix-dictionary": "Zolmeister/prefix-dictionary",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "prefix-dictionary": "0.0.2"
   },
   "devDependencies": {
     "gt": "~0.8.21",
