--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "check-types": "~1.1.1",
-    "matrix-paths-zolmeister": "0.0.4",
+    "check-types": "1.4.0",
     "lodash": "~2.4.1",
+    "matrix-paths-zolmeister": "0.0.4",
     "prefix-dictionary": "0.0.2"
   },
   "devDependencies": {
-    "gt": "~0.8.21",
+    "gt": "0.8.47",
     "jsc": "~0.3.11",
-    "pre-git": "0.0.14"
+    "pre-git": "0.1.1"
   }
 }
