test(dont-break): Testing dependent projects using circle ci
work on #5

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 machine:
   node:
     version: "0.12"
+dependencies:
+  post:
+    - npm install -g dont-break
 test:
   override:
-    - npm test
+    - npm run dont-break
